# time-plot

./: .gitignore  .rumdl.toml  AGENTS.md  CLAUDE.md  README.md  SESSION.md  local_build_backend.py  main.py  pyproject.toml
doc/: architecture.md  example_data.md  plugins.md
example_data/: cosine.csv  sine.csv
plugins/spice_pwl/: __init__.py
plugins/voltage_time_csv/: __init__.py
plugins/voltage_vs_time_csv/: __init__.py
sample-data/: voltage_time_sample.csv
sample_data/: cosine.csv  spice_pwl_test1.spi
scripts/: generate_example_data.py
tests/: test_cadence_dynamic_power_totalcurrent_plugin.py  test_cli_integration.py  test_cli_parsing.py  test_example_data.py  test_plotting.py  test_processing.py  test_sample_data.py  test_spice_pwl_plugin.py  test_units.py  test_vcd_plugin.py  test_voltage_time_csv_plugin.py
time_plot/: __init__.py  cli.py  example_data.py  expr_parser.py  models.py  plotting.py  plugin_system.py  processing.py  sample_data.py  units.py
time_plot/example_data/: VDD.peak.totalcurrent  cosine.csv  foo.txt  logic.vcd  sine.csv  spice_pwl.spi
time_plot/plugins/cadence_dynamic_power_totalcurrent/: __init__.py
time_plot/plugins/spice_pwl/: __init__.py
time_plot/plugins/txt_file/: __init__.py
time_plot/plugins/vcd/: __init__.py
time_plot/plugins/voltage_or_current_vs_time/: __init__.py
