[project]
name = "time-plot"
version = "0.1.0"
description = "Plot generic time-series data using uPlot."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click",
    "numpy",
    "rich-click>=1.9.7",
    "uplot-python>=1.0.0",
]

[project.scripts]
time_plot = "time_plot.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[build-system]
requires = []
build-backend = "local_build_backend"
backend-path = ["."]
